# STARS-CLI

./: .env.example  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  DEMO_GUIDE.md  IMPROVEMENTS_v3.1.1.md  LICENSE  PHASE1_COMPLETE.md  PRIVACY_IMPLEMENTATION_SUMMARY.md  QA_REPORT.md  QUICK_REFERENCE.md  README.md  REFACTORING.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  RELEASE_NOTES_v4.2.6.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_HARDENING_REPORT.md  SECURITY_PRIVACY_COMPLETE_SUMMARY.md  SECURITY_RELEASE.md  SRE_FEATURES.md  TODO-IMPLEMENTATION.md  WHY_TARS.md  demo.sh  install.sh  pyproject.toml  rename_to_stars.sh  requirements.txt  sast_report.json  setup.py  stars.spec  stars_entry.py  tars.py  test_phase1.py  test_phase2.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: ALL_PHASES_COMPLETE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  IMPLEMENTATION_STATUS.md  INDEX.md  NAMESPACE_SCANNING.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASES_1_2_COMPLETE.md  PRIVACY.md  PRODUCTION_HARDENING_REPORT.md  PROMETHEUS_INTEGRATION.md  PUBLISHING.md  QA_REPORT.md  QUICK_REFERENCE.md  RBAC_REQUIREMENTS.md  RELEASE_v3.0.0.md  SCREENSHOTS.md  SECURITY_AUDIT.md  TEST_REPORT.md  WHY_STARS.md
screenshots/: README.md  health.txt  oncall.txt  top.txt
src/stars/: __init__.py  ai.py  (+8 more)
tests/: README.md  qa_comprehensive.py  test_config.py  test_phase1.py  test_phase2.py  test_phase3.py  test_security.py
(+15 files in other folders)
